--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,6 +6,11 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+  # Pip ecosystem.
+  - package-ecosystem: "pip"
+    directory: "/tfagents-flutter/"
+    schedule:
+      interval: "daily"
   # Pub ecosystem.
   - package-ecosystem: "pub"
     directory: "/adaptive_app/step_03/"
@@ -33,6 +38,30 @@ updates:
       interval: "daily"
   - package-ecosystem: "pub"
     directory: "/adaptive_app/step_07/yt_cors_proxy/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/animated-responsive-layout/step_03/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/animated-responsive-layout/step_04/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/animated-responsive-layout/step_05/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/animated-responsive-layout/step_06/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/animated-responsive-layout/step_07/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/animated-responsive-layout/step_08/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
@@ -100,7 +129,63 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_03/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_04/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_05/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_06_a/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_06_b/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_07_a/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_07_b/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_08/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_09/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_10/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_11_a/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_11_b/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/dart-patterns-and-records/step_12/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
     directory: "/dartpad_codelabs/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/deeplink_cookbook/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
@@ -176,6 +261,10 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
+    directory: "/flame-building-doodle-dash/finished_game/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
     directory: "/flame-building-doodle-dash/step_02/"
     schedule:
       interval: "daily"
@@ -240,15 +329,47 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
+    directory: "/haiku_generator/finished/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/haiku_generator/step0/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/haiku_generator/step1/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/haiku_generator/step2/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/haiku_generator/step3/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/homescreen_codelab/step_03/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/homescreen_codelab/step_04/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/homescreen_codelab/step_05/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/homescreen_codelab/step_06/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
     directory: "/in_app_purchases/complete/app/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
-    directory: "/in_app_purchases/complete/app_rest/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/in_app_purchases/complete/firebase-backend-dart/"
+    directory: "/in_app_purchases/complete/dart-backend/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
@@ -256,7 +377,15 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
+    directory: "/in_app_purchases/step_00/dart-backend/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
     directory: "/in_app_purchases/step_07/app/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/in_app_purchases/step_07/dart-backend/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
@@ -264,7 +393,15 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
+    directory: "/in_app_purchases/step_08/dart-backend/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
     directory: "/in_app_purchases/step_09/app/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/in_app_purchases/step_09/dart-backend/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
@@ -272,11 +409,155 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
-    directory: "/plugin_codelab/"
+    directory: "/in_app_purchases/step_10/dart-backend/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
-    directory: "/plugin_codelab/example/"
+    directory: "/namer/step_03/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_04_a_widget/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_04_b_behavior/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_a_pair/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_b_extract/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_c_card_padding/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_d_theme/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_e_text_style/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_f_accessibility/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_g_center_vertical/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_h_center_horizontal/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_05_i_optional_changes/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_06_a_business_logic/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_06_b_add_row/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_06_c_add_like_button/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_07_a_split_my_home_page/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_07_b_convert_to_stateful/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_07_c_add_selectedindex/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_07_d_use_selectedindex/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_07_e_add_layout_builder/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/namer/step_08/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_01/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_02_a/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_02_b/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_02_c/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_03_a/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_03_b/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_03_c/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_04_a/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_04_b/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_04_c/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_04_d/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_04_e/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_05_a/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_05_b/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/next-gen-ui/step_06/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/pesto_flutter/final/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
@@ -308,38 +589,6 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
-    directory: "/startup_namer/step1_base/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/startup_namer/step2_use_package/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/startup_namer/step3_stateful_widget/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/startup_namer/step4_infinite_list/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/startup_namer/step5_add_icons/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/startup_namer/step6_add_interactivity/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/startup_namer/step7_navigate_route/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
-    directory: "/startup_namer/step8_themes/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pub"
     directory: "/testing_codelab/step_03/"
     schedule:
       interval: "daily"
@@ -357,6 +606,10 @@ updates:
       interval: "daily"
   - package-ecosystem: "pub"
     directory: "/testing_codelab/step_07/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/testing_codelab/step_08/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
@@ -428,6 +681,10 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "pub"
+    directory: "/tooling/claat_export_images/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
     directory: "/tooling/codelab_rebuild/"
     schedule:
       interval: "daily"
@@ -469,34 +726,5 @@ updates:
       interval: "daily"
   - package-ecosystem: "pub"
     directory: "/webview_flutter/step_12/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/in_app_purchases/step_00/firebase-backend/functions"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/in_app_purchases/step_07/firebase-backend/functions/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/in_app_purchases/step_08/firebase-backend/functions/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/in_app_purchases/step_09/firebase-backend/functions/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/in_app_purchases/step_10/firebase-backend/functions/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/in_app_purchases/complete/firebase-backend/functions/"
-    schedule:
-      interval: "daily"
-  # Pip ecosystem.
-  - package-ecosystem: "pip"
-    directory: "/tfagents-flutter/"
     schedule:
       interval: "daily"
