--- a/in_app_purchases/step_07/dart-backend/pubspec.yaml
+++ b/in_app_purchases/step_07/dart-backend/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   googleapis: ^11.0.0
   googleapis_auth: ^1.3.0
-  http: ">=0.13.4 <2.0.0"
+  http: ^1.1.0
   shelf: ^1.3.0
   shelf_router: ^1.1.2
   app_store_server_sdk: ^1.2.5
