--- a/flame-building-doodle-dash/step_07/pubspec.yaml
+++ b/flame-building-doodle-dash/step_07/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.2 <4.0.0'
+  sdk: '>=3.1.0-262.2.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flame: 1.7.3
-  google_fonts: ^5.0.0
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
