--- a/star_counter/step_10/pubspec.yaml
+++ b/star_counter/step_10/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.1.0-262.2.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,10 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_markdown: ^0.6.14
-  github: ^9.14.0
+  flutter_markdown: ^0.6.17
+  github: ^9.17.0
   intl: ^0.18.1
-  url_launcher: ^6.1.11
+  url_launcher: ^6.1.12
 
 
   # The following adds the Cupertino Icons font to your application.
