--- a/adaptive_app/step_05/pubspec.yaml
+++ b/adaptive_app/step_05/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.1.0-0
+  sdk: '>=3.1.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,12 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  googleapis: ^11.3.0
+  googleapis: ^11.4.0
   http: ^1.1.0
   provider: ^6.0.5
   url_launcher: ^6.1.12
-  flex_color_scheme: ^7.2.0
-  go_router: ^10.0.0
+  flex_color_scheme: ^7.3.1
+  go_router: ^10.1.0
   split_view: ^3.2.1
 
 dev_dependencies:
