--- a/adaptive_app/step_07/yt_cors_proxy/pubspec.yaml
+++ b/adaptive_app/step_07/yt_cors_proxy/pubspec.yaml
@@ -3,7 +3,7 @@ description: A YouTube CORS Proxy Server.
 version: 1.0.0
 
 environment:
-  sdk: ^3.1.0-0
+  sdk: ^3.1.0
 
 dependencies:
   http: ^1.1.0
