--- a/boring_to_beautiful/step_01/pubspec.yaml
+++ b/boring_to_beautiful/step_01/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 1.0.0
 
 environment:
-  sdk: ^3.1.0-0
+  sdk: ^3.1.0
 
 dependencies:
   adaptive_breakpoints: ^0.1.6
@@ -20,7 +20,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   freezed_annotation: ^2.4.1
-  go_router: ^10.0.0
+  go_router: ^10.1.0
   material_color_utilities: ^0.5.0
   universal_platform: ^1.0.0+1
   url_launcher: ^6.1.12
@@ -30,7 +30,7 @@ dev_dependencies:
   flutter_lints: ^2.0.2
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.1
+  freezed: ^2.4.2
 
 flutter:
   uses-material-design: true
