--- a/firebase-get-to-know-flutter/codelab_rebuild.yaml
+++ b/firebase-get-to-know-flutter/codelab_rebuild.yaml
@@ -54,6 +54,27 @@ steps:
                    versionName flutterVersionName
       - name: Remove the README.md
         rm: gtk_flutter/README.md
+      - name: Remove VSCode config
+        rmdir: gtk_flutter/.vscode
+      - name: VSCode config
+        path: gtk_flutter
+        mkdir: .vscode
+      - name: Add launch.json
+        path: gtk_flutter/.vscode/launch.json
+        replace-contents: |
+          {
+            // Use IntelliSense to learn about possible attributes.
+            // Hover to view descriptions of existing attributes.
+            // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+            "version": "0.2.0",
+            "configurations": [
+              {
+                "name": "gtk_flutter",
+                "request": "launch",
+                "type": "dart"
+              }
+            ]
+          }
       - name: Replace lib/main.dart
         path: gtk_flutter/lib/main.dart
         replace-contents: |
