--- a/ffigen_codelab/step_05/pubspec.yaml
+++ b/ffigen_codelab/step_05/pubspec.yaml
@@ -4,11 +4,11 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ^3.1.0-0
+  sdk: '>=3.1.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
-  ffi: ^2.0.2
+  ffi: ^2.1.0
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
