--- a/firebase-auth-flutterfire-ui/codelab_rebuild.yaml
+++ b/firebase-auth-flutterfire-ui/codelab_rebuild.yaml
@@ -4717,7 +4717,7 @@ steps:
       - name: Build iOS
         platforms: [ macos ]
         path: complete
-        flutter: build ios
+        flutter: build ios --simulator
       - name: Remove start
         rmdir: start
       - name: Copy start
@@ -4916,7 +4916,7 @@ steps:
       - name: Build iOS
         platforms: [ macos ]
         path: complete
-        flutter: build ios
+        flutter: build ios --simulator
       - name: Flutter clean
         path: start
         flutter: clean
