--- a/firebase-auth-flutterfire-ui/complete/pubspec.yaml
+++ b/firebase-auth-flutterfire-ui/complete/pubspec.yaml
@@ -4,12 +4,12 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.0-262.2.beta <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
-  cloud_firestore: ^4.8.4
-  firebase_auth: ^4.7.2
-  firebase_core: ^2.15.0
+  cloud_firestore: ^4.9.0
+  firebase_auth: ^4.8.0
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
   flutterfire_ui: ^0.4.3+20
