--- a/google-maps-in-flutter/codelab_rebuild.yaml
+++ b/google-maps-in-flutter/codelab_rebuild.yaml
@@ -6,9 +6,6 @@ steps:
         rmdir: step_3
       - name: Create project
         flutter: create google_maps_in_flutter --platforms android,ios,web
-      - name: Strip DEVELOPMENT_TEAM
-        strip-lines-containing: DEVELOPMENT_TEAM =
-        path: google_maps_in_flutter/ios/Runner.xcodeproj/project.pbxproj
       - name: Configure analysis_options.yaml
         path: google_maps_in_flutter/analysis_options.yaml
         replace-contents: |
@@ -49,14 +46,16 @@ steps:
         patch-u: |
           --- b/google-maps-in-flutter/step_3/android/app/build.gradle
           +++ a/google-maps-in-flutter/step_3/android/app/build.gradle
-          @@ -43,9 +43,7 @@ android {
+          @@ -43,9 +43,9 @@ android {
                defaultConfig {
                    // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
                    applicationId "com.example.google_maps_in_flutter"
           -        // You can update the following values to match your application needs.
           -        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
           -        minSdkVersion flutter.minSdkVersion
-          +        minSdkVersion 20
+          +        // Minimum Android version for Google Maps SDK
+          +        // https://developers.google.com/maps/flutter-plugin/config#android
+          +        minSdkVersion 21
                    targetSdkVersion flutter.targetSdkVersion
                    versionCode flutterVersionCode.toInteger()
                    versionName flutterVersionName
@@ -66,11 +65,12 @@ steps:
         patch-u: |
           --- b/google-maps-in-flutter/step_3/ios/Podfile
           +++ a/google-maps-in-flutter/step_3/ios/Podfile
-          @@ -1,5 +1,5 @@
+          @@ -1,5 +1,6 @@
           -# Uncomment this line to define a global platform for your project
           -# platform :ios, '11.0'
-          +#  Google Maps SDK requires platform version 13
-          +platform :ios, '13.0'
+          +# Google Maps SDK requires platform version 14
+          +# https://developers.google.com/maps/flutter-plugin/config#ios
+          +platform :ios, '14.0'
            
            # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
            ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -127,6 +127,9 @@ steps:
       - name: flutter clean
         path: google_maps_in_flutter
         flutter: clean
+      - name: flutter get
+        path: google_maps_in_flutter
+        flutter: pub get
       - name: build Android
         platforms: [ macos ]
         path: google_maps_in_flutter
@@ -134,7 +137,7 @@ steps:
       - name: build iOS
         platforms: [ macos ]
         path: google_maps_in_flutter
-        flutter: build ios
+        flutter: build ios --simulator
       - name: build web
         path: google_maps_in_flutter
         flutter: build web
@@ -1461,7 +1464,7 @@ steps:
       - name: build iOS
         platforms: [ macos ]
         path: google_maps_in_flutter
-        flutter: build ios
+        flutter: build ios --simulator
       - name: build web
         path: google_maps_in_flutter
         flutter: build web
