--- a/google-maps-in-flutter/step_5/android/app/build.gradle
+++ b/google-maps-in-flutter/step_5/android/app/build.gradle
@@ -43,7 +43,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.google_maps_in_flutter"
-        minSdkVersion 20
+        // Minimum Android version for Google Maps SDK
+        // https://developers.google.com/maps/flutter-plugin/config#android
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
